# DedTasks

./: .gitignore  README.md
Onegin/: CMakeLists.txt  Onegin.txt  out.txt
Onegin/html/: _onegin_sorter_8h_source.html  annotated.html  class_onegin_sorter-members.html  class_onegin_sorter.html  classes.html  dir_0ca8d4c7455981ea095c330d255c5a37.html  dir_4b114ee8c86707c8c6577fe0dfc50220.html  dir_7d3f2dc68903bd104c045b58ac8dfdbf.html  dir_d522931ffa1371640980b621734a4381.html  dir_eee6ea189ae155ebdba5da30156d4527.html  files.html  functions.html  functions_func.html  index.html
Onegin/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js
Onegin/latex/: annotated.tex  class_onegin_sorter.tex  refman.tex
Onegin/src/: FileHandler.cpp  FileHandler.h  OneginSorter.cpp  OneginSorter.h  main.cpp
Onegin/src/tests/: test.cpp
Stack/src/: Exceptions.h  Stack.h  Tests.cpp  main.cpp
